# mesmerizer

./: .gitignore  Cargo.toml  LICENSE  README.md
assets/teto-ascii/: teto.txt
crates/mes/: Cargo.toml
crates/mes-core/: Cargo.toml
crates/mes-core/src/: error.rs  lib.rs
crates/mes-core/src/convert/: mod.rs
crates/mes-core/src/decode/: chain.rs  classify.rs  mod.rs
crates/mes-core/src/pack/: extract.rs  format.rs  mod.rs  parse.rs
crates/mes-core/src/provider/: claude_code.rs  codex.rs  mod.rs
crates/mes-core/src/scaffold/: mod.rs  templates.rs
crates/mes-core/src/template/: mod.rs  render.rs
crates/mes-core/src/teto/: check.rs  doctor.rs  env_ref.rs  error.rs  exec.rs  header.rs  mcp.rs  mod.rs  render.rs  repair.rs  setup.rs  store.rs
crates/mes-core/tests/: convert_test.rs  decode_test.rs  pack_test.rs  provider_test.rs  scaffold_test.rs  template_test.rs  teto_check_test.rs  teto_env_ref_test.rs  teto_exec_test.rs  teto_mcp_test.rs  teto_repair_test.rs  teto_store_test.rs
crates/mes-core/tests/fixtures/teto_env_refs/crypto-toolkit/: SKILL.md
crates/mes-core/tests/fixtures/teto_env_refs/pwn-toolkit/: SKILL.md
crates/mes/src/: main.rs
crates/mes/src/cmd/: ask.rs  conv.rs  decode.rs  mod.rs  pack.rs  scaffold.rs  teto.rs
nvim/: README.md
nvim/lua/mesmerizer/: adapter.lua  config.lua  diff.lua  init.lua  sync.lua  ui.lua
nvim/plugin/: mesmerizer.lua
