[workspace]
resolver = "2"
members = ["crates/mes", "crates/mes-core"]

[workspace.package]
version = "0.0.1"
edition = "2021"
authors = ["playteddypicker"]
license = "MIT"

[workspace.dependencies]
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
regex = "1"
base64 = "0.22"
hex = "0.4"
urlencoding = "2"
directories = "6"
walkdir = "2"
clap = { version = "4", features = ["derive"] }
tree-sitter = "0.25"
tree-sitter-python = "0.25"
tree-sitter-rust = "0.24"
